--- a/views/articles/show.ejs
+++ b/views/articles/show.ejs
@@ -79,19 +79,17 @@
 
 <script>
     
-    var myImgs = document.querySelectorAll('.lazy');
-    var config = {
+    const myImgs = document.querySelectorAll('.lazy');
+    const config = {
         rootMargin: '50px 20px 75px 30px',
         threshold: [0, 0.25, 0.75, 1]
     };
     observer = new IntersectionObserver(entries => {
         entries.forEach(entry => {
             if (entry.isIntersecting) {
-
-                var lazyImage = entry.target
+                const lazyImage = entry.target
                 lazyImage.src = lazyImage.dataset.src
                 lazyImage.classList.remove("lazy");
-                
             }
         });
     },config);
@@ -99,11 +97,8 @@
     myImgs.forEach(image => {
         observer.observe(image);
     });
-    
 
-    myImgs.forEach(image => {
-        observer.observe(image);
-    });
+    
     var body = { features: <%- JSON.stringify(article.body) %> };
      
     var stringHTML = body.features;
