--- a/views/index.ejs
+++ b/views/index.ejs
@@ -114,7 +114,7 @@
                 
                 
                         <div class="swiper-slide" style="background-color: transparent;">
-                            <a href="/projects/<%= project.id %>"><img class="title-image image-gallery lazy"
+                            <a href="/projects/<%= project.id %>"><img class="image-gallery lazy"
                                 data-src="<%= image_url(project.images[0].public_id, {width: 485, height: 360,  crop: "fit"}) %>"
                                 src="<%= image_url(project.images[0].public_id, {width: 60, height: 60,  crop: "fit"}) %>"
                                 alt="<%= project.title %>"
@@ -225,7 +225,7 @@
                         
                     
                         <div class="swiper-slide" style="background-color: transparent;">
-                            <a href="/articles/<%= article.id %>"><img class="title-image image-gallery lazy"
+                            <a href="/articles/<%= article.id %>"><img class="image-gallery lazy"
                                 data-src="<%= image_url(article.images[0].public_id, {width: 485, height: 360,  crop: "fit"}) %>"
                                 src="<%= image_url(article.images[0].public_id, {width: 85, height: 60,  crop: "fit"}) %>"
                                 alt="<%= article.title %>"></a>       
@@ -279,18 +279,23 @@
 
 
 <script>
-    
-    const myImgs = document.querySelectorAll('.lazy');
-    const config = {
+    if (!('IntersectionObserver' in window)) {
+        alert('lazy load is broken')
+    }
+    var myImgs = document.querySelectorAll('.lazy');
+    var config = {
         rootMargin: '50px 20px 75px 30px',
         threshold: [0, 0.25, 0.75, 1]
     };
+    
     observer = new IntersectionObserver(entries => {
         entries.forEach(entry => {
             if (entry.isIntersecting) {
+                
                 const lazyImage = entry.target
                 lazyImage.src = lazyImage.dataset.src
                 lazyImage.classList.remove("lazy");
+                
             }
         });
     },config);
@@ -298,7 +303,6 @@
     myImgs.forEach(image => {
         observer.observe(image);
     });
-    
     var swiperProjects = new Swiper('.swiper-container', {
         lazy: {
             loadPrevNext: true,
