--- a/public/stylesheets/index-second-section.css
+++ b/public/stylesheets/index-second-section.css
@@ -74,7 +74,7 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
-        
+        align-items: center;
     }
     .map-points {
     
@@ -126,6 +126,8 @@
         
     }
 }
+
+
 
 
 @media all and (max-width: 1480px) {
