--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
       <p class='text-index-title'>
           Предлагаем две стратегии инвестирования: простая аренда с доходностью до 7% годовых и проекты добавленной стоимости с доходностью до 15% годовых. 
       </p>
-      <form action="/projects" method="GET">
+      <form class="form-main" action="/projects" method="GET">
         <div class="input-group"> 
             
             <button class="input-text-head" id="input-location" type="button">
@@ -69,7 +69,7 @@
       
     </div>
     <div class="right-section">
-            <h3 class="title-mobile"> Elapce - гид по миру <br> недвижимости </h3>
+            <h3 class="title-mobile"> Elapce - ваш гид <br> по миру зарубежной <br> недвижимости </h3>
             <div class="copter"></div>
             
             
