--- a/views/index.ejs
+++ b/views/index.ejs
@@ -161,7 +161,7 @@
             <div class="card-image keys-about" style="background-image: url('../images/keys-middle.png');" data-image-full="../images/keys.png">
                 <img src="../images/keys-middle.png" alt="Keys" />    
             </div>
-            <span class="text-about-content keys-content">Нашим приоритетом является поиск идеального объекта для клиента, а не размер вознаграждения</span>  
+            <span class="text-about-content keys-content">Нашим приоритетом является поиск идеального объекта для клиента</span>  
         </div>
         <div class="about-item-block">
             <div class="card-image search-about" style="background-image: url('../images/search-middle.png');" data-image-full="../images/search.png">
