--- a/views/projects/show.ejs
+++ b/views/projects/show.ejs
@@ -129,7 +129,7 @@
         
         <div class="map-info">
             <h5 class="map-position-title">Испания, Гранада, Маракена, Урбанизация Ула</h5>
-            <a href="#" class="city-link">О Гранаде</a>
+            <a href="/guides?country=Испания" class="city-link">О Гранаде</a>
             <p class="map-distance">20 км до аэропорта</p>
             <p class="map-distance">8 км до центра города</p>
         </div>
@@ -169,7 +169,7 @@
     </form>
     
         <% } else { %>
-            <h3 class="create-review"> <a href="/login?returnTo=true">Создать отзыв</a></h3> 
+            <h3 class="create-review"> <a href="/register?returnTo=true">Создать отзыв</a></h3> 
         <% } %>
     
         <% project.reviews.forEach(function(review){ %>
