--- a/public/stylesheets/project-index.css
+++ b/public/stylesheets/project-index.css
@@ -8,7 +8,7 @@ a:hover {
 }
 
 .content-wrapper {
-    max-width:1240px;
+    max-width:1535px;
     margin:0 auto;
     padding: 0 15px;
     display: flex;
@@ -24,21 +24,21 @@ a:hover {
 .wrapper-project-index {
     display: flex;
     justify-content: flex-start;
-    max-width: 1170px;
     flex-wrap: wrap;
     position: relative;
     z-index: 1000;
     margin:0 auto;
+    flex-direction: column;
+    align-items: center;
 }
 
 
 .project-card {
-    
     margin:0 0 40px;
     height:auto;
     box-sizing: border-box;
-    flex: 0 0 30.33333333%;
-    max-width: 30.33333333%;
+    flex: 0 0 75%;
+    max-width: 75%;
 }    
 
 .title-image {
@@ -99,10 +99,24 @@ a:hover {
     margin-top:0 !important;
 }
 
+@media (min-width: 1281px) {
+    .content-wrapper {
+        max-width:1240px;
+        
+    } 
+}
+
 @media all and (min-width: 900px) { 
     
     .project-card {
         margin:0 10px 80px;
+        flex: 0 0 30%;
+        max-width: 30%;
+    }
+
+    .wrapper-project-index {
+        flex-direction: row;
+        align-items: flex-start;
     }
 
     .content-wrapper {
@@ -153,11 +167,4 @@ a:hover {
 
 
 }   
-@media all and (max-width: 1080px) {
-    .wrapper-project-index {
-        display: flex;
-        justify-content: center;
-        
-        
-    }   
-}
+
