--- a/public/stylesheets/project-index.css
+++ b/public/stylesheets/project-index.css
@@ -99,14 +99,14 @@ a:hover {
     margin-top:0 !important;
 }
 
-@media (min-width: 1600px) {
+@media (max-width: 1600px) {
     .content-wrapper {
         max-width:1535px;
         
     } 
 }
 
-@media (min-width: 1281px) {
+@media (max-width: 1281px)  {
     .content-wrapper {
         max-width:1240px;
         
