--- a/public/stylesheets/project-show.css
+++ b/public/stylesheets/project-show.css
@@ -282,7 +282,7 @@ a:hover {
   .gallery-title {
     font-size: 24px;
     line-height: 27px;
-    margin:141px 0 100px;
+    margin:141px 16px 100px;
   }
 
 
@@ -435,6 +435,14 @@ a:hover {
     margin:0 auto;
 }
 
+.more-objects-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    max-width:1240px;
+    margin:0 auto;
+}
+
 .more-title {
     margin:0 16px 42px !important;
     
@@ -460,9 +468,23 @@ a:hover {
     margin-left:16px;
 }
 
-@media (min-width: 1281px) {
+@media (max-width: 1600px) {
+    .content-project-wrapper  {
+        max-width:1535px;
+        
+    } 
+    .more-title {
+        margin-left:16px !important; 
+    }
+}
+
+@media (max-width: 1440px)  {
     .content-project-wrapper {
-        max-width: 1170px;
+        max-width:1240px;
+        
+    }
+    .more-title {
+        margin-left:16px !important; 
     }
 }    
 
@@ -593,7 +615,9 @@ a:hover {
         margin-bottom: 30px;
     }
 
-    .more-wrapper {
+    
+
+    .more-objects-wrapper {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -644,7 +668,7 @@ a:hover {
     }
 
     .more-title {
-        margin-left:196px !important; 
+        margin-left:196px; 
     }
 
     .swiper-container-mobile {
@@ -749,6 +773,13 @@ a:hover {
     }
 
     .more-wrapper {
+        display: flex;
+        margin:0 auto;
+        max-width: 1545px;
+        width:100%;
+    }
+
+    .more-objects-wrapper {
         display: flex;
         
         margin:0 auto;
