--- a/public/stylesheets/project-show.css
+++ b/public/stylesheets/project-show.css
@@ -266,7 +266,7 @@ a:hover {
     flex-wrap: wrap;
     justify-content: flex-start;
     position: relative;
-    max-width: 1170px;
+    max-width: 1535px;
     margin:0 auto;
   }
 
@@ -469,20 +469,20 @@ a:hover {
 }
 
 @media (max-width: 1600px) {
-    .content-project-wrapper  {
+    .content-project-wrapper,  .more-wrapper, .gallery-show  {
         max-width:1535px;
         
     } 
     .more-title {
         margin-left:16px !important; 
     }
+    
 }
 
 @media (max-width: 1440px)  {
-    .content-project-wrapper {
-        max-width:1240px;
-        
-    }
+    .content-project-wrapper,  .more-wrapper, .gallery-show  {
+        max-width:1240px;  
+    } 
     .more-title {
         margin-left:16px !important; 
     }
