--- a/public/stylesheets/project-show.css
+++ b/public/stylesheets/project-show.css
@@ -469,7 +469,7 @@ a:hover {
 }
 
 @media (max-width: 1600px) {
-    .content-project-wrapper,  .more-wrapper, .gallery-show  {
+    .content-project-wrapper,  .more-wrapper, .gallery-show, .more-objects-wrapper  {
         max-width:1535px;
         
     } 
@@ -480,7 +480,7 @@ a:hover {
 }
 
 @media (max-width: 1440px)  {
-    .content-project-wrapper,  .more-wrapper, .gallery-show  {
+    .content-project-wrapper,  .more-wrapper, .gallery-show, .more-objects-wrapper   {
         max-width:1240px;  
     } 
     .more-title {
@@ -621,7 +621,7 @@ a:hover {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        max-width:1240px;
+        max-width:1535px;
         margin:0 auto;
     }
     
