--- a/views/articles/show.ejs
+++ b/views/articles/show.ejs
@@ -51,7 +51,7 @@
         <div class="author-content">
             <p class="article-author-title">автор статьи</p>
             <h5 class="article-author-name"><%= user.username %></h5>
-            <a href="http://localhost:3000/articles?search=&author=<%= user._id %>" class="link-all-author">посмотреть все статьи автора</a>
+            <a href="/articles?search=&author=<%= user._id %>" class="link-all-author">посмотреть все статьи автора</a>
             <span></span>
         </div>
         
