--- a/views/partials/searchArticles.ejs
+++ b/views/partials/searchArticles.ejs
@@ -10,25 +10,25 @@
     <div class="input-group">
         <div class="category-filter">
             <div class="checkbox-container">
-                <a href="http://localhost:3000/articles?search=&category=" class="checklabel">Все статьи</a>
+                <a href="/articles?search=&category=" class="checklabel">Все статьи</a>
             </div>
             <div class="checkbox-container">
-                <a href="http://localhost:3000/articles?search=&category=ВНЖ" class="checklabel">ВНЖ</a>
+                <a href="/articles?search=&category=ВНЖ" class="checklabel">ВНЖ</a>
             </div>
             <div class="checkbox-container">
-                <a href="http://localhost:3000/articles?search=&category=Инвестиции" class="checklabel">Инвестиции</a>
+                <a href="/articles?search=&category=Инвестиции" class="checklabel">Инвестиции</a>
             </div>
             <div class="checkbox-container">
-                <a href="http://localhost:3000/articles?search=&category=Налоги" class="checklabel">Налоги</a>
+                <a href="/articles?search=&category=Налоги" class="checklabel">Налоги</a>
             </div>
             <div class="checkbox-container">
-                <a href="http://localhost:3000/articles?search=&category=Покупка+и+оформление" class="checklabel">Покупка и оформление</a>
+                <a href="/articles?search=&category=Покупка+и+оформление" class="checklabel">Покупка и оформление</a>
             </div>
             <div class="checkbox-container">
-                <a href="http://localhost:3000/articles?search=&category=Рынки+и+цены" class="checklabel">Рынки и цены</a>
+                <a href="/articles?search=&category=Рынки+и+цены" class="checklabel">Рынки и цены</a>
             </div>
             <div class="checkbox-container">
-                <a href="http://localhost:3000/articles?search=&category=Новости" class="checklabel">Новости</a>
+                <a href="/articles?search=&category=Новости" class="checklabel">Новости</a>
             </div>
         </div>
     </div>
@@ -36,25 +36,25 @@
     <div class="swiper-container mobile-filter">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
-                <a href="http://localhost:3000/articles?search=&category=" class="checklabel">Все статьи</a>
+                <a href="/articles?search=&category=" class="checklabel">Все статьи</a>
             </div>
             <div class="swiper-slide">
-                <a href="http://localhost:3000/articles?search=&category=ВНЖ" class="checklabel">ВНЖ</a>
+                <a href="/articles?search=&category=ВНЖ" class="checklabel">ВНЖ</a>
             </div>
             <div class="swiper-slide">
-                <a href="http://localhost:3000/articles?search=&category=Инвестиции" class="checklabel">Инвестиции</a>
+                <a href="/articles?search=&category=Инвестиции" class="checklabel">Инвестиции</a>
             </div>
             <div class="swiper-slide">
-                <a href="http://localhost:3000/articles?search=&category=Налоги" class="checklabel">Налоги</a>
+                <a href="/articles?search=&category=Налоги" class="checklabel">Налоги</a>
             </div>
             <div class="swiper-slide">
-                <a href="http://localhost:3000/articles?search=&category=Покупка+и+оформление" class="checklabel">Покупка и оформление</a>
+                <a href="/articles?search=&category=Покупка+и+оформление" class="checklabel">Покупка и оформление</a>
             </div>
             <div class="swiper-slide">
-                <a href="http://localhost:3000/articles?search=&category=Рынки+и+цены" class="checklabel">Рынки и цены</a>
+                <a href="/articles?search=&category=Рынки+и+цены" class="checklabel">Рынки и цены</a>
             </div>
             <div class="swiper-slide">
-                <a href="http://localhost:3000/articles?search=&category=Новости" class="checklabel">Новости</a>
+                <a href="/articles?search=&category=Новости" class="checklabel">Новости</a>
             </div>
          
         </div>
