--- a/views/partials/searchGuides.ejs
+++ b/views/partials/searchGuides.ejs
@@ -10,13 +10,13 @@
         <div class="input-group">
             <div class="category-filter">
                 <div class="checkbox-container">
-                    <a href="http://localhost:3000/guides" class="checklabel">Все страны</a>
+                    <a href="/guides" class="checklabel">Все страны</a>
                 </div>
                 <div class="checkbox-container">
-                    <a href="http://localhost:3000/guides?country=Украина" class="checklabel">Украина</a>
+                    <a href="/guides?country=Украина" class="checklabel">Украина</a>
                 </div>
                 <div class="checkbox-container">
-                    <a href="http://localhost:3000/guides?country=Испания" class="checklabel">Испания</a>
+                    <a href="/guides?country=Испания" class="checklabel">Испания</a>
                 </div>
             </div>
         </div>
@@ -24,13 +24,13 @@
     <div class="swiper-container mobile-filter">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
-                <a href="http://localhost:3000/guides" class="checklabel">Все страны</a>
+                <a href="/guides" class="checklabel">Все страны</a>
             </div>
             <div class="swiper-slide">
-                <a href="http://localhost:3000/guides?country=Украина" class="checklabel">Украина</a>
+                <a href="/guides?country=Украина" class="checklabel">Украина</a>
             </div>
             <div class="swiper-slide">
-                <a href="http://localhost:3000/guides?country=Испания" class="checklabel">Испания</a>
+                <a href="/guides?country=Испания" class="checklabel">Испания</a>
             </div> 
         </div>
     </div>
